@@ -1,3 +1,6 @@
+jlatexmath (1.0.6)
+	* Italic correction was not taken into account when making box for a CharSymbol.
+
 jlatexmath (1.0.5)
 	* Support ~ as non breakable space.
 
